Updated translations, fixed bugs with layout

--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -277,10 +277,11 @@
   "nftQuantity": "NFT数量",
   "priceAndCurrency": "価格と通貨",
   "networkSwitchingError": "ネットワーク切り替えエラー",
-  "differentNetworks": "あなたのウォレットと弊社サイトで、異なるネットワークが選択されていることがわかりました。",
-  "changeNetworkInTheWallet": " ",
-  "orChangeNetwork": " 何をするか選択してください。",
-  "changeManually": "ウォレットのネットワークを変更する",
+  "differentNetworks": "あなたのウォレットと弊社サイトで、異なるネットワークが選択されていることがわかりました。\n \n 何をするか選択してください。",
+  "changeNetworkInTheWallet": "ウォレットのネットワークを変更する",
+  "orChangeNetwork": " または、当社サイトでネットワークを変更する",
+  "changeManually": "あなたのウォレットと弊社サイトで選択されているネットワークが異なることがわかりました\n \n ウォレットと当社サイトで異なるネットワークが選択されています。\n \n ウォレットのネットワークを手動で変更するか、下のボタンを使用してください",
+  "continue": "続ける",
 
   "time": {
     "time": "時間",
@@ -294,20 +295,20 @@
     "validDeadline": "有効な期限を入力してください。",
     "transactionMayFail": "トランザクションが失敗する可能性があります。",
     "transactionMayFrontrun": "トランザクションがフロントランになる可能性があります",
-    "tokenNotWhitelisted": "警告! このトークンはホワイトリストに登録されていません。",
-    "invalidTokenAddress": " ",
-    "importTokenWarning": " カスタムトークンとして追加することで、それ以降のやり取りはすべて自己責任であると確認したことになります。",
-    "importTokenWarningPurchase": "無効なトークンアドレス",
-    "youMaybeUnable": "既存のトークンの偽物や、本来トークンを持たないプロジェクトのトークンの作成を含め、誰でも任意の名前でBSC上にBEP20トークンを作成することができます。",
-    "transactionRejected": " ",
-    "willNotSucceed": " このインターフェースでは、トークン・アドレスによって任意のトークンを読み込むことができます。任意のBEP20トークンとやりとりする際には、十分に注意し、調査を行ってください。",
-    "timeoutError": "任意のトークンを購入した場合、",
-    "contactSupport": "それを売り戻すことができない可能性があります。",
-    "swapFailed": "トランザクションが拒否されました。",
-    "insufficientBalance": "このトランザクションは、価格変動や送金手数料により成功しません。スリッページの許容量を増やしてみてください。",
-    "invalidPair": "トランザクションが通りませんでした。おそらく、スリッページの許容範囲を超えたか、期限切れのタイムアウトが原因です。",
-    "tokenAlreadyAdded": " 再度お試しいただくか、設定メニューでこれらの設定を変更してください。",
-    "routingThroughTokens": "予期せぬエラーです。サポートにお問い合わせください：どのコールもエラーになりませんでした。."
+    "tokenNotWhitelisted": "警告! このトークンはホワイトリストに登録されていません。\n \n カスタムトークンとして追加することで、それ以降のやり取りはすべて自己責任であると確認したことになります。",
+    "invalidTokenAddress": "無効なトークンアドレス",
+    "importTokenWarning": " 既存のトークンの偽物や、本来トークンを持たないプロジェクトのトークンの作成を含め、誰でも任意の名前でBSC上にBEP20トークンを作成することができます。\n \n このインターフェースでは、トークン・アドレスによって任意のトークンを読み込むことができます。任意のBEP20トークンとやりとりする際には、十分に注意し、調査を行ってください。",
+    "importTokenWarningPurchase": "任意のトークンを購入した場合、",
+    "youMaybeUnable": "それを売り戻すことができない可能性があります。",
+    "transactionRejected": "トランザクションが拒否されました。",
+    "willNotSucceed": " このトランザクションは、価格変動や送金手数料により成功しません。スリッページの許容量を増やしてみてください。",
+    "timeoutError": "トランザクションが通りませんでした。おそらく、スリッページの許容範囲を超えたか、期限切れのタイムアウトが原因です。\n 再度お試しいただくか、設定メニューでこれらの設定を変更してください。",
+    "contactSupport": "予期せぬエラーです。サポートにお問い合わせください：どのコールもエラーになりませんでした。",
+    "swapFailed": "スワップ失敗",
+    "insufficientBalance": "{{ balance }}残高不足",
+    "invalidPair": "無効なペア",
+    "tokenAlreadyAdded": " このアドレスのトークンはすでに追加されています",
+    "routingThroughTokens": "これらのトークンを経由した結果、取引に最適な価格が得られました。"
   },
   "questionHelperMessages": {
     "addLiquidity": "流動性を追加すると、自分のポジションを表すプールトークンが与えられます。これらのトークンは、プールのシェアに比例した手数料を自動的に獲得し、いつでも換金することができます。",
