--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -282,6 +282,7 @@
   "orChangeNetwork": " または、当社サイトでネットワークを変更する",
   "changeManually": "あなたのウォレットと弊社サイトで選択されているネットワークが異なることがわかりました\n \n ウォレットと当社サイトで異なるネットワークが選択されています。\n \n ウォレットのネットワークを手動で変更するか、下のボタンを使用してください",
   "continue": "続ける",
+  "for": "にとって",
 
   "time": {
     "time": "時間",
