--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -283,6 +283,7 @@
   "changeManually": "あなたのウォレットと弊社サイトで選択されているネットワークが異なることがわかりました\n \n ウォレットと当社サイトで異なるネットワークが選択されています。\n \n ウォレットのネットワークを手動で変更するか、下のボタンを使用してください",
   "continue": "続ける",
   "for": "にとって",
+  "comingSoon": "近日公開",
 
   "time": {
     "time": "時間",
