--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -283,6 +283,7 @@
   "changeManually": "We found that you have different networks\nselected in your wallet and on our site.\nChange network in your wallet manually or use the button below",
   "continue": "Continue",
   "for": "for",
+  "presentationLink": "https://gateway.pinata.cloud/ipfs/QmQyWnMBruL7n7vqyVYxNXQdpm5rffj9e1Wr2Q48LU9PvY/gravis_presentation.pdf",
 
   "time": {
     "time": "Time",
