--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -284,6 +284,7 @@
   "continue": "Continue",
   "for": "for",
   "presentationLink": "https://gateway.pinata.cloud/ipfs/QmQyWnMBruL7n7vqyVYxNXQdpm5rffj9e1Wr2Q48LU9PvY/gravis_presentation.pdf",
+  "language": "en",
 
   "time": {
     "time": "Time",
