--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -284,6 +284,8 @@
   "continue": "続ける",
   "for": "にとって",
   "presentationLink": "http://gateway.pinata.cloud/ipfs/QmS3gYhCphkyDN1GWg3TTqKFdJUCGXTKiGpi6BhSupjpJb/Gravis_presentation_JP.pdf",
+  "language": "en",
+
   "time": {
     "time": "時間",
     "1week": "1週間",
