--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -284,7 +284,7 @@
   "continue": "続ける",
   "for": "にとって",
   "presentationLink": "http://gateway.pinata.cloud/ipfs/QmS3gYhCphkyDN1GWg3TTqKFdJUCGXTKiGpi6BhSupjpJb/Gravis_presentation_JP.pdf",
-  "language": "en",
+  "language": "jp",
 
   "time": {
     "time": "時間",
