--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -108,6 +108,7 @@
   "copyAddress": "アドレスをコピー",
   "viewOnBscscan": "BSCScanで見る",
   "viewOnHecoInfo": "HecoInfoで見る",
+  "MaticInfo": "Maticで見る",
   "clearAll": "すべてクリア",
   "close": "閉じる",
   "noRecentTransactions": "最近のトランザクションがありません",
