--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -286,6 +286,7 @@
   "for": "にとって",
   "presentationLink": "http://gateway.pinata.cloud/ipfs/QmS3gYhCphkyDN1GWg3TTqKFdJUCGXTKiGpi6BhSupjpJb/Gravis_presentation_JP.pdf",
   "language": "jp",
+  "inPool": "インプール",
 
   "time": {
     "time": "時間",
