--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -286,6 +286,7 @@
   "for": "for",
   "presentationLink": "https://gateway.pinata.cloud/ipfs/QmQyWnMBruL7n7vqyVYxNXQdpm5rffj9e1Wr2Q48LU9PvY/gravis_presentation.pdf",
   "language": "en",
+  "inPool": "in pool",
 
   "time": {
     "time": "Time",
