--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -287,6 +287,7 @@
   "presentationLink": "http://gateway.pinata.cloud/ipfs/QmS3gYhCphkyDN1GWg3TTqKFdJUCGXTKiGpi6BhSupjpJb/Gravis_presentation_JP.pdf",
   "language": "jp",
   "inPool": "インプール",
+  "viewPairAnalytics": "View pair analytics",
 
   "time": {
     "time": "時間",
