Added info about reading blockchain

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -288,6 +288,8 @@
   "language": "en",
   "inPool": "in pool",
   "viewPairAnalytics": "View pair analytics",
+  "provideSecondToken": "Provide second token",
+  "readingBlockchain": "Reading blockchain...",
 
   "time": {
     "time": "Time",
