--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -290,6 +290,7 @@
   "viewPairAnalytics": "View pair analytics",
   "provideSecondToken": "Provide second token",
   "readingBlockchain": "Reading blockchain...",
+  "comingSoon": "Coming soon",
 
   "time": {
     "time": "Time",
