--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -290,6 +290,7 @@
   "viewPairAnalytics": "View pair analytics",
   "provideSecondToken": "第二のトークンを提供",
   "readingBlockchain": "Reading blockchain...",
+  "addToMetamask": "Add to Metamask",
 
   "time": {
     "time": "時間",
